# exp-uivector-prediction-wains

./: ChangeLog.md  LICENSE  README.md  config.sh  constant.csv  currentStats.sh  energySummary.sh  exp-prediction-wains.cabal  exp-uivector-prediction-wains.cabal  gmonitor  init-daemon.sh  notes  package.yaml  prediction-wains.cabal  prediction.config  quickSummary.sh  stack.yaml  start-daemon.sh  stop-daemon.sh  trend.sh  trendSummary.sh  trimUniverse
app/: Main.hs
appAgentCSV/: Main.hs
appBrainReport/: Main.hs
appExamineAgent/: Main.hs
appGenPop/: Main.hs
appInteractive/: Main.hs
src/ALife/Creatur/Wain/Prediction/: Action.hs  Action.hs~  Daemon.hs  Daemon.hs~  DataGen.hs  DataGen.hs~  DataSource.hs  ExamineAgent.hs  ExamineAgent.hs~  Experiment.hs  GeneratePopulation.hs  GeneratePopulation.hs~  Interactive.hs  Object.hs  Queue.hs  Queue.hs~  Universe.hs  Universe.hs~  VectorThinker.hs  VectorThinker.hs~  VectorTweaker.hs  Wain.hs  Wain.hs~
src/ALife/Creatur/Wain/UIVector/Prediction/: Action.hs  BrainReport.hs  Daemon.hs  DataGen.hs  DataSource.hs  ExamineAgent.hs  Experiment.hs  GeneratePopulation.hs  Interactive.hs  Object.hs  Queue.hs  ResponseTweaker.hs  Universe.hs
test/: Main.hs  Main.hs~  Spec.hs
test/ALife/Creatur/Wain/Prediction/: ActionQC.hs  ExperimentQC.hs  TestUtils.hs  VectorThinkerQC.hs  VectorTweakerQC.hs  WainQC.hs
test/ALife/Creatur/Wain/UIVector/Prediction/: ActionQC.hs  ExperimentQC.hs  TestUtils.hs
