name:                exp-uivector-prediction-wains
version:             1.1.2
synopsis:            Agent for predicting the future.
description:         ALife agent that competes with other
                     agents to predict the future.
homepage:            https://github.com/mhwombat/exp-uivector-prediction-wains
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) Amy de Buitléir 2013-2015
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable exp-uivector-prediction-daemon
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/Daemon.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    bytestring ==0.10.*,
                    cereal ==0.5.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-uivector-wains ==1.0.* && >= 1.0.3,
                    creatur-wains ==8.4.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    hdaemonize ==0.5.*,
                    lens ==4.13.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==9.0.*,
                    split ==0.2.*,
                    text ==1.2.*,
                    time ==1.6.*,
                    transformers ==0.5.*,
                    unix ==2.7.*,
                    vector ==0.11.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable exp-uivector-prediction-interactive
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/Interactive.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -fprof-auto
  build-depends:    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    bytestring ==0.10.*,
                    cereal ==0.5.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-uivector-wains ==1.0.* && >= 1.0.3,
                    creatur-wains ==8.4.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    hdaemonize ==0.5.*,
                    lens ==4.13.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==9.0.*,
                    split ==0.2.*,
                    text ==1.2.*,
                    time ==1.6.*,
                    transformers ==0.5.*,
                    unix ==2.7.*,
                    vector ==0.11.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable exp-uivector-prediction-init
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/GeneratePopulation.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    cereal ==0.5.*,
                    cond ==0.4.*,
                    colour ==2.3.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-uivector-wains ==1.0.* && >= 1.0.3,
                    creatur-wains ==8.4.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    lens ==4.13.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==9.0.*,
                    split ==0.2.*,
                    time ==1.6.*,
                    transformers ==0.5.*,
                    unix ==2.7.*,
                    vector ==0.11.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

executable exp-uivector-prediction-examine
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/ExamineAgent.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    bytestring ==0.10.*,
                    cereal ==0.5.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-uivector-wains ==1.0.* && >= 1.0.3,
                    creatur-wains ==8.4.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    lens ==4.13.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    old-locale ==1.0.*,
                    random ==1.1.*,
                    som ==9.0.*,
                    split ==0.2.*,
                    time ==1.6.*,
                    transformers ==0.5.*,
                    unix ==2.7.*,
                    vector ==0.11.*,
                    zlib ==0.6.*
  hs-source-dirs:   src

-- executable exp-uivector-prediction-datagen
--   main-is:          ALife/Creatur/Wain/UIVector/Prediction/DataGen.hs
--   ghc-options:      -Wall -Werror
--   build-depends:
--                     app-settings ==0.2.* && >=0.2.0.5,
--                     array ==0.5.*,
--                     base >=4.8 && <5,
--                     bytestring ==0.10.*,
--                     cereal ==0.5.*,
--                     colour ==2.3.*,
--                     cond ==0.4.*,
--                     containers ==0.5.*,
--                     creatur ==5.9.*,
--                     creatur-uivector-wains ==1.0.* && >= 1.0.3,
--                     creatur-wains ==8.4.*,
--                     directory ==1.2.*,
--                     filepath ==1.4.*,
--                     lens ==4.13.*,
--                     MonadRandom ==0.4.*,
--                     mtl ==2.2.*,
--                     old-locale ==1.0.*,
--                     random ==1.1.*,
--                     som ==9.0.*,
--                     split ==0.2.*,
--                     time ==1.6.*,
--                     transformers ==0.5.*,
--                     unix ==2.7.*,
--                     vector ==0.11.*,
--                     zlib ==0.6.*
--   hs-source-dirs:   src

Test-suite exp-uivector-prediction-tests
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  GHC-Options:      -Wall -fno-warn-orphans
  Hs-source-dirs:   test, src
  build-depends:
                    app-settings ==0.2.* && >=0.2.0.5,
                    array ==0.5.*,
                    base >=4.8 && <5,
                    bytestring ==0.10.*,
                    cereal ==0.5.*,
                    colour ==2.3.*,
                    cond ==0.4.*,
                    containers ==0.5.*,
                    creatur ==5.9.*,
                    creatur-uivector-wains ==1.0.* && >= 1.0.3,
                    creatur-wains ==8.4.*,
                    creatur-wains-test-utils ==1.0.*,
                    directory ==1.2.*,
                    filepath ==1.4.*,
                    lens ==4.13.*,
                    MonadRandom ==0.4.*,
                    mtl ==2.2.*,
                    random ==1.1.*,
                    som ==9.0.*,
                    split ==0.2.*,
                    test-framework ==0.8.*,
                    test-framework-hunit ==0.3.*,
                    test-framework-quickcheck2 ==0.3.*,
                    transformers ==0.5.*,
                    vector ==0.11.*,
                    QuickCheck ==2.7.* || ==2.8.*
  -- Other-modules:    ALife.Creatur.Wain.Prediction.TestUtils
