name:                exp-uivector-prediction-wains
version:             1.6.3
synopsis:            Agent for predicting the future.
description:         ALife agent that competes with other
                     agents to predict the future.
homepage:            https://github.com/mhwombat/exp-uivector-prediction-wains#readme
bug-reports:         https://github.com/mhwombat/exp-uivector-prediction-wains/issues
license:             BSD3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
copyright:           (c) 2013-2017 Amy de Buitléir
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable exp-uivector-prediction-daemon
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/Daemon.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:    app-settings,
                    array,
                    base,
                    bytestring,
                    cereal,
                    colour,
                    cond,
                    containers,
                    creatur,
                    creatur-uivector-wains,
                    creatur-wains,
                    deepseq,
                    directory,
                    filepath,
                    hdaemonize,
                    lens,
                    MonadRandom,
                    mtl,
                    old-locale,
                    random,
                    som,
                    split,
                    text,
                    time,
                    transformers,
                    unix,
                    vector,
                    zlib
  hs-source-dirs:   src
  other-modules:    ALife.Creatur.Wain.UIVector.Prediction.Action
                    ALife.Creatur.Wain.UIVector.Prediction.DataSource
                    ALife.Creatur.Wain.UIVector.Prediction.Experiment
                    ALife.Creatur.Wain.UIVector.Prediction.ResponseTweaker
                    ALife.Creatur.Wain.UIVector.Prediction.Universe

executable exp-uivector-prediction-interactive
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/Interactive.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -fprof-auto
  build-depends:    app-settings,
                    array,
                    base,
                    bytestring,
                    cereal,
                    colour,
                    cond,
                    containers,
                    creatur,
                    creatur-uivector-wains,
                    creatur-wains,
                    deepseq,
                    directory,
                    filepath,
                    hdaemonize,
                    lens,
                    MonadRandom,
                    mtl,
                    old-locale,
                    random,
                    som,
                    split,
                    text,
                    time,
                    transformers,
                    unix,
                    vector,
                    zlib
  hs-source-dirs:   src
  other-modules:    ALife.Creatur.Wain.UIVector.Prediction.Action
                    ALife.Creatur.Wain.UIVector.Prediction.DataSource
                    ALife.Creatur.Wain.UIVector.Prediction.Experiment
                    ALife.Creatur.Wain.UIVector.Prediction.ResponseTweaker
                    ALife.Creatur.Wain.UIVector.Prediction.Universe

executable exp-uivector-prediction-init
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/GeneratePopulation.hs
  ghc-options:      -Wall -Werror -O2 -rtsopts -threaded
  build-depends:
                    app-settings,
                    array,
                    base,
                    cereal,
                    cond,
                    colour,
                    containers,
                    creatur,
                    creatur-uivector-wains,
                    creatur-wains,
                    deepseq,
                    directory,
                    filepath,
                    lens,
                    MonadRandom,
                    mtl,
                    old-locale,
                    random,
                    som,
                    split,
                    time,
                    transformers,
                    unix,
                    vector,
                    zlib
  hs-source-dirs:   src
  other-modules:    ALife.Creatur.Wain.UIVector.Prediction.Action
                    ALife.Creatur.Wain.UIVector.Prediction.DataSource
                    ALife.Creatur.Wain.UIVector.Prediction.Experiment
                    ALife.Creatur.Wain.UIVector.Prediction.ResponseTweaker
                    ALife.Creatur.Wain.UIVector.Prediction.Universe

executable exp-uivector-prediction-examine
  main-is:          ALife/Creatur/Wain/UIVector/Prediction/ExamineAgent.hs
  ghc-options:      -Wall -Werror
  build-depends:
                    app-settings,
                    array,
                    base,
                    bytestring,
                    cereal,
                    colour,
                    cond,
                    containers,
                    creatur,
                    creatur-uivector-wains,
                    creatur-wains,
                    deepseq,
                    directory,
                    filepath,
                    lens,
                    MonadRandom,
                    mtl,
                    old-locale,
                    random,
                    som,
                    split,
                    time,
                    transformers,
                    unix,
                    vector,
                    zlib
  hs-source-dirs:   src
  other-modules:    ALife.Creatur.Wain.UIVector.Prediction.Action
                    ALife.Creatur.Wain.UIVector.Prediction.DataSource
                    ALife.Creatur.Wain.UIVector.Prediction.Experiment
                    ALife.Creatur.Wain.UIVector.Prediction.ResponseTweaker
                    ALife.Creatur.Wain.UIVector.Prediction.Universe

Test-suite exp-uivector-prediction-wains-tests
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  GHC-Options:      -Wall -fno-warn-orphans
  Hs-source-dirs:   test, src
  build-depends:
                    app-settings,
                    array,
                    base,
                    bytestring,
                    cereal,
                    colour,
                    cond,
                    containers,
                    creatur,
                    creatur-uivector-wains,
                    creatur-wains,
                    creatur-wains-test-utils,
                    deepseq,
                    directory,
                    filepath,
                    lens,
                    MonadRandom,
                    mtl,
                    random,
                    som,
                    split,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2,
                    transformers,
                    vector,
                    QuickCheck
  other-modules:    ALife.Creatur.Wain.UIVector.Prediction.Action
                    ALife.Creatur.Wain.UIVector.Prediction.DataSource
                    ALife.Creatur.Wain.UIVector.Prediction.Experiment
                    ALife.Creatur.Wain.UIVector.Prediction.ResponseTweaker
                    ALife.Creatur.Wain.UIVector.Prediction.Universe
                    ALife.Creatur.Wain.UIVector.Prediction.ActionQC
                    ALife.Creatur.Wain.UIVector.Prediction.ExperimentQC

source-repository head
  type:     git
  location: https://github.com/mhwombat/exp-uivector-prediction-wains
